Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-05 (SVN):
    * added Siggi's initial software renderer 2D scaling implementation
      among the optional patches.

2013-02-05 (SVN):
    * draw.c (Draw_Character,Draw_SmallCharacter,Draw_TransPicCropped):
      take the trans_level check out of the loops, evaluating it only
      once instead of every iteration.
    * updated version date stamp to 2013-02-05.

2013-02-04 (SVN):
    * updated config.guess and config.sub from savannah git repo.
    * updated version date stamp to 2013-02-04.

2013-02-04 (SVN):
    * finalize the malloc() safety in timidity: instrum_dls.c still has
      to be edited, but it is not built by default, either:
    * libs, timidity/instrum.c: make sure that malloc() is successful.
      clear the allocated memory for ip and its sample in order to help
      the error handling and/or freeing routines. make sure that sample
      pointer is valid in free_instrument().
    * libs, timidity/timidity.c: make sure that malloc() is successful
      in mid_song_load_dls(). use safe_free() whenever possible in the
      song freeing processes.

2013-02-04 (SVN):
    * libs, timidity/instrum.c: remove the noluck variable and directly
      check whether the file pointer is NULL.

2013-02-04 (SVN):
    * libs, timidity/readmidi.c: make sure that malloc() is successful
      in read_meta_data(), read_midi_event(), read_midi_file(), and in
      groom_list().

2013-02-04 (SVN):
    * libs, timidity/readmidi.c: use safe_free() in read_meta_data(). no
      need for an early return in free_midi_list(). return NULL instead
      of newlist at the end of read_midi_event(), because the whole body
      of the function is a for(;;) loop to begin with.

2013-02-04 (SVN):
    * libs, timidity/resample.c (pre_resample): do not proceed if memory
      alloctation fails.

2013-02-04 (SVN):
    * libs, timidity: change timidity initialization so that a failure,