@@ -4,6 +4,12 @@ Development Progress	:
 ---------------------------
 
 2013-02-05 (SVN):
+    * timidity, intrum_dls.c: apply the same one extra sample space fix
+      from r5049-r5050 to load_region_dls() to cure memory error reports
+      from valgrind. removed a comment from instrum.c:free_bank() which
+      is no longer valid. minor tidy-ups here and there.
+
+2013-02-05 (SVN):
     * added Siggi's initial software renderer 2D scaling implementation
       among the optional patches.
 
